# crabscore

./: .gitignore  Cargo.toml  LICENSE  README.md  USER_GUIDE.md
crabscore-analysis/: Cargo.toml  README.md
crabscore-analysis/src/: analysis.rs  lib.rs  metrics.rs  safety.rs
crabscore-cli/: Cargo.toml  README.md
crabscore-cli/src/: binary_discovery.rs  cli.rs  command.rs  complexity.rs  estimation.rs  lib.rs  main.rs  scoring_engine.rs  web_dashboard.html
crabscore-core/: Cargo.toml  README.md
crabscore-core/benches/: benchmark.rs
crabscore-core/src/: analysis.rs  error.rs  lib.rs  metrics.rs  profiles.rs  scoring.rs
crabscore-cost/: Cargo.toml  README.md
crabscore-cost/src/: lib.rs  provider.rs
crabscore-energy/: Cargo.toml  README.md
crabscore-energy/src/: interface.rs  lib.rs  macos.rs
crabscore-report/: Cargo.toml  README.md
crabscore-report/src/: formats.rs  generator.rs  lib.rs  web.rs
crabscore-report/static/: report.html
examples/: fibonacci.rs  hello_world.rs  library_crate.rs
