[package]
name = "crabscore-report"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
authors.workspace = true
description = "Report generation and web dashboard for CrabScore - The Rust Efficiency Standard"

[dependencies]
crabscore-core = { version = "0.1.0", path = "../crabscore-core" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4", features = ["fs", "trace"] }
handlebars = "4.3"
anyhow = "1.0"

tracing = "0.1"
html-escape = "0.2"
